fix footer widths on small screen devices

--- a/metrix-explorer-ui/styles/mixins.less
+++ b/metrix-explorer-ui/styles/mixins.less
@@ -51,7 +51,8 @@
   }
 
   .container {
-    margin-top: 1rem;
+    width: 100%;
+    margin-top: 3.8rem;
   }
 }
 
